Step 4 Mobile UI Refinement: Title 1.2x, Balls 1.1x, and Badge text update

--- a/index.html
+++ b/index.html
@@ -6107,7 +6107,7 @@
                                         letter-spacing: 2px;
                                         text-shadow: 0 2px 10px rgba(0,0,0,0.45);
                                         white-space: nowrap;
-                                    ">7주 &nbsp;/&nbsp; 15주 &nbsp;/&nbsp; 52주</span>
+                                    ">7/15/52주 ★자동선택★</span>
                                 </div>
                             </div>
 
@@ -9826,8 +9826,8 @@
 
                 /* Step 4: Regression Optimization */
                 #naviStep4 h2 {
-                    font-size: 14px !important;
-                    /* [요청] 60% 축소 (23.4px * 0.6) */
+                    font-size: 16.8px !important;
+                    /* [요청] 1.2배 확대 (14px -> 16.8px) */
                     margin-top: 5px !important;
                     margin-bottom: 10px !important;
                 }
@@ -9846,12 +9846,12 @@
                     width: 90% !important;
                 }
 
-                /* [요청] 박스 내부 원형 숫자 1.2배 상향 (16px -> 19.2px) */
+                /* [요청] 박스 내부 원형 숫자 1.1배 상향 (19.2px -> 21.1px) */
                 .fixed-num-tag,
                 .fixed-num-empty {
-                    width: 19.2px !important;
-                    height: 19.2px !important;
-                    font-size: 9.6px !important;
+                    width: 21.1px !important;
+                    height: 21.1px !important;
+                    font-size: 10.6px !important;
                     margin: 0 2px !important;
                     border-width: 1px !important;
                 }
@@ -9872,10 +9872,10 @@
                     letter-spacing: 1px !important;
                 }
 
-                /* [요청] 3가지 캡슐 가로길이 60% 축소 (100px -> 60px) / 높이 1.3배 확대 (75px -> 97.5px) */
+                /* [요청] 높이 추가 1.3배 확대 (97.5px -> 126px) */
                 .reg-card-3d {
                     width: 60px !important;
-                    height: 97.5px !important;
+                    height: 126px !important;
                 }
 
                 .reg-card-3d .bell-jar {
