--- a/index.html
+++ b/index.html
@@ -9872,42 +9872,46 @@
                 }
 
                 .regression-layout {
-                    gap: 0px !important;
-                    /* [요청] 간격 제거 및 밀착 */
-                    margin-top: -10px !important;
+                    gap: 0 !important;
+                    margin-top: -5px !important;
                 }
 
                 .regression-card-container {
-                    padding: 0 !important;
-                    /* 컨테이너 내부 여백 제거 */
+                    padding: 5px 0 !important;
                 }
 
                 .reg-card-3d {
                     width: 60px !important;
-                    height: 123.5px !important;
-                    margin-bottom: -40px !important;
-                    /* [미션] 아래 요소와 강제 밀착 */
+                    height: 110px !important;
+                    margin-bottom: 0 !important;
                 }
 
                 .reg-card-3d .bell-jar {
                     transform: scale(0.6) !important;
-                    margin-bottom: -28px !important;
+                    margin-bottom: -15px !important;
                 }
 
                 .reg-card-label {
                     font-size: 8.4px !important;
+                    margin-top: 0 !important;
                 }
 
                 #fingerPointer {
                     font-size: 30px !important;
-                    top: -60px !important;
-                    /* [미션] 손가락을 캡슐 밑면으로 바짝 끌어올림 */
+                    position: absolute !important;
+                    top: 0 !important;
+                    left: 50% !important;
+                    /* JS translation handle: transform: translateX(calc(-50% + ...)) */
                 }
 
                 #fingerPointerWrap {
-                    height: 20px !important;
-                    margin-top: -85px !important;
-                    /* [미션] 전체 레이아웃 텐션 극대화 */
+                    position: relative !important;
+                    display: flex;
+                    justify-content: center;
+                    height: 35px !important;
+                    margin-top: -12px !important;
+                    /* Tight to capsules */
+                    overflow: visible !important;
                 }
 
                 .candidate-grid {
