Step 5 UI Final Refinement: unified border, increased ball font size, and 50% AI panel width

--- a/index.html
+++ b/index.html
@@ -6162,7 +6162,7 @@
                                     style="color:var(--secondary);">Step 5.</span> 행운의 끝수 (왼쪽에서 선택) :</h2>
 
                             <div class="cumulative-status" id="endCumulativeStatus"
-                                style="margin-bottom: 2px; border-bottom: none; padding-bottom: 15px; width: 90%;">
+                                style="margin-bottom: 2px; padding-bottom: 15px; width: 90%;">
                                 <strong>앞번호:</strong> <span id="endFixedNumsList"></span>
                             </div>
 
@@ -9934,16 +9934,16 @@
                 }
 
                 .ending-ball {
-                    font-size: 7.8px !important;
-                    /* 60% of 13px */
+                    font-size: 9.36px !important;
+                    /* 1.2x of previous 7.8px (60% of 13px) */
                     width: 32px !important;
                     /* Proactive scaling for better fit */
                     height: 32px !important;
                 }
 
                 .ai-analysis-panel {
-                    flex: 0 0 70% !important;
-                    max-width: 70% !important;
+                    flex: 0 0 50% !important;
+                    max-width: 50% !important;
                 }
             }
 
