Step 5 UI Polish: reverted finger emoji, moved prompt, updated text, and adjusted layout gap

--- a/index.html
+++ b/index.html
@@ -6172,9 +6172,9 @@
                                 <div class="ai-analysis-panel">
                                     <p class="ai-instruction-text" id="step5Instruction"
                                         style="font-size: 15px; font-weight: bold; line-height: 1.4;">
-                                        당신의 선택!!<br>
-                                        아래 게이지로<br>
-                                        알려드려요
+                                        당신의 선택!<br>
+                                        아래 그래프로<br>
+                                        당첨확률을 보여드려요!
                                     </p>
 
 
@@ -6198,7 +6198,7 @@
                                 <!-- 왼쪽 방향 손가락 프롬프트 -->
                                 <div class="finger-prompt-step5" id="step5FingerPrompt">
                                     <span class="finger-prompt-text">번호를 골라주세요!</span>
-                                    <span style="font-size:40px; line-height:1;">👉</span>
+                                    <span style="font-size:40px; line-height:1;">👈</span>
                                 </div>
                             </div>
                         </div>
@@ -9003,7 +9003,7 @@
 
             .finger-prompt-step5 {
                 position: absolute;
-                bottom: 14px;
+                bottom: 9px;
                 /* 최종 위치: 위로 10px 추가 이동 */
                 left: 31%;
                 margin-left: 32px;
@@ -9860,7 +9860,7 @@
                 }
 
                 .step5-main-layout {
-                    gap: 3px !important;
+                    gap: 4px !important;
                     margin-top: 0 !important;
                     justify-content: center !important;
                     display: flex !important;
@@ -9882,8 +9882,8 @@
                 }
 
                 .ai-analysis-panel {
-                    flex: 0 0 calc(53% - 3px) !important;
-                    max-width: calc(53% - 3px) !important;
+                    flex: 0 0 calc(53% - 4px) !important;
+                    max-width: calc(53% - 4px) !important;
                     margin-left: 0 !important;
                 }
             }
