--- a/index.html
+++ b/index.html
@@ -6171,7 +6171,7 @@
                                 <!-- Right: AI Analysis & Gauge -->
                                 <div class="ai-analysis-panel">
                                     <p class="ai-instruction-text" id="step5Instruction"
-                                        style="font-size: 15px; font-weight: bold; line-height: 1.4;">
+                                        style="font-size: 12.75px; font-weight: bold; line-height: 1.4;">
                                         당신의 선택!<br>
                                         아래 그래프로<br>
                                         당첨확률을 보여드려요!
@@ -6191,7 +6191,7 @@
                                     <div id="step5CompletionMsg"
                                         style="display:none; margin-top:10px; font-weight:900; color:#4ade80; animation: bounce 0.5s infinite alternate; font-size: 70%;">
                                         Navi 5단계 선택완료<br>
-                                        최종6단계는 KINOV AI가<br>
+                                        최종6단계는 <span style="color: #7c3aed; font-weight: 900;">KINOV AI</span>가<br>
                                         선택드립니다!!
                                     </div>
                                 </div>
