Step 5 UI Polish: reduced box height, text size, and gauge gap

--- a/index.html
+++ b/index.html
@@ -6158,7 +6158,7 @@
                                     style="color:var(--secondary);">Step 5.</span> 행운의 끝수 (왼쪽에서 선택) :</h2>
 
                             <div class="cumulative-status" id="endCumulativeStatus"
-                                style="margin-bottom: 2px; padding-bottom: 15px; width: 90%;">
+                                style="margin-bottom: 2px; padding-bottom: 8px; width: 90%;">
                                 <strong>앞번호:</strong> <span id="endFixedNumsList"></span>
                             </div>
 
@@ -6171,7 +6171,7 @@
                                 <!-- Right: AI Analysis & Gauge -->
                                 <div class="ai-analysis-panel">
                                     <p class="ai-instruction-text" id="step5Instruction"
-                                        style="font-size: 12.75px; font-weight: bold; line-height: 1.4;">
+                                        style="font-size: 10.8px; font-weight: bold; line-height: 1.4;">
                                         당신의 선택!<br>
                                         아래 그래프로<br>
                                         당첨확률을 보여드려요!
@@ -9885,6 +9885,10 @@
                     flex: 0 0 calc(53% - 4px) !important;
                     max-width: calc(53% - 4px) !important;
                     margin-left: 0 !important;
+                }
+
+                .probability-container {
+                    margin-top: 5px !important;
                 }
             }
 
