--- a/index.html
+++ b/index.html
@@ -5942,7 +5942,7 @@
 
                 <div id="naviStepContainer"> <!-- Premium Header & Counter -->
                     <div style="background: #f8f9fa; padding: 16px; border-bottom: 1px solid #eee; text-align: center;">
-                        <div style="font-size: 12.5px; color: #1976d2; margin-bottom: 4px; font-weight: bold;">현재 분석 중인
+                        <div style="font-size: 11.25px; color: #1976d2; margin-bottom: 4px; font-weight: bold;">현재 분석 중인
                             조합 수</div>
                         <div id="naviComboCounter" class="combination-counter">8,145,060</div>
                         <div
@@ -9475,7 +9475,7 @@
 
                 /* [요청] 조합 수: 현재 대비 1.1배 (이전 17px -> ~18.7px) */
                 #naviComboCounter {
-                    font-size: 18.7px !important;
+                    font-size: 16.83px !important;
                     margin-bottom: 2px !important;
                 }
 
@@ -9776,7 +9776,7 @@
                 }
 
                 .cumulative-status {
-                    padding: 8px 10px !important;
+                    padding: 4px 10px !important;
                     font-size: 12.1px !important;
                     /* [요청] 1.1배 확대 (11px -> 12.1px) */
                     width: 90% !important;
@@ -9855,8 +9855,9 @@
 
                 /* Step 5: Ending Digits Optimization */
                 #naviStep5 h2 {
-                    font-size: 14.17px !important;
-                    /* 65% of 21.8px */
+                    font-size: 13.46px !important;
+                    margin-bottom: 3px !important;
+                    margin-top: 10px !important;
                 }
 
                 .step5-main-layout {
