Step 6 UI Optimization: Compressed layout, matrix, and result balls for mobile

--- a/index.html
+++ b/index.html
@@ -9891,6 +9891,80 @@
                 .probability-container {
                     margin-top: 5px !important;
                 }
+
+                /* Step 6: Final AI Recommendation Optimization */
+                #naviStep6 h2 {
+                    font-size: 14.04px !important;
+                    /* 60% of 23.4px */
+                    margin-top: 5px !important;
+                    margin-bottom: 5px !important;
+                }
+
+                .step6-status-bar {
+                    width: 250px !important;
+                    /* approx 80% of original fit-content */
+                    padding: 8px 12px !important;
+                    gap: 6px !important;
+                    margin-bottom: 12px !important;
+                }
+
+                .step6-slot {
+                    width: 32px !important;
+                    height: 32px !important;
+                    font-size: 11.2px !important;
+                    /* 80% of 14px */
+                }
+
+                .step6-slot.empty {
+                    font-size: 14.4px !important;
+                    /* 80% of 18px */
+                }
+
+                .step6-main-layout {
+                    gap: 8px !important;
+                    margin-top: 0 !important;
+                }
+
+                .step6-matrix-wrapper {
+                    flex: 0 0 60% !important;
+                    max-width: 60% !important;
+                    padding: 8px 5px !important;
+                }
+
+                .step6-matrix {
+                    gap: 4px !important;
+                }
+
+                .step6-cell {
+                    font-size: 11px !important;
+                    border-radius: 6px !important;
+                }
+
+                .step6-matrix-label {
+                    font-size: 8px !important;
+                    letter-spacing: 1px !important;
+                    margin-bottom: 6px !important;
+                }
+
+                .step6-result-wrapper {
+                    flex: 1 !important;
+                    gap: 5px !important;
+                }
+
+                .step6-result-box {
+                    width: 70px !important;
+                    height: 70px !important;
+                    border-radius: 12px !important;
+                }
+
+                .step6-result-box .result-number {
+                    font-size: 30px !important;
+                }
+
+                .step6-result-sublabel,
+                .step6-result-caption {
+                    font-size: 9px !important;
+                }
             }
 
             /* ============================================================ */
