Step 6 UI Polish: updated title, shrank status bar to 70%, and fixed matrix cell scaling

--- a/index.html
+++ b/index.html
@@ -6206,7 +6206,7 @@
                         <!-- Step 6: AI 최종 번호 추출 & 운명의 완성 -->
                         <div class="navi-step-container" id="naviStep6">
                             <h2 style="margin-top: 15px; margin-bottom: 5px; font-size:23.4px; opacity:0.8;"><span
-                                    style="color:var(--secondary);">Step 6.</span> KINOV AI가 제안하는 운명의 숫자</h2>
+                                    style="color:var(--secondary);">Step 6.</span> KINOV가 제안하는 운명의 숫자</h2>
                             <div style="text-align:center; margin-bottom: 5px;">
                                 <div class="battle-theme-text" style="font-size: 14.5px;">
                                     데이터의 정수를 모아<br>
@@ -9901,43 +9901,44 @@
                 }
 
                 .step6-status-bar {
-                    width: 250px !important;
-                    /* approx 80% of original fit-content */
-                    padding: 8px 12px !important;
-                    gap: 6px !important;
-                    margin-bottom: 12px !important;
+                    width: 190px !important;
+                    /* 70% of approx 270px original */
+                    padding: 6px 10px !important;
+                    gap: 4px !important;
+                    margin-bottom: 17px !important;
+                    /* 12px + 5px extra gap */
                 }
 
                 .step6-slot {
-                    width: 32px !important;
-                    height: 32px !important;
-                    font-size: 11.2px !important;
-                    /* 80% of 14px */
+                    width: 26px !important;
+                    height: 26px !important;
+                    font-size: 10px !important;
                 }
 
                 .step6-slot.empty {
-                    font-size: 14.4px !important;
-                    /* 80% of 18px */
+                    font-size: 12px !important;
                 }
 
                 .step6-main-layout {
-                    gap: 8px !important;
+                    gap: 5px !important;
                     margin-top: 0 !important;
                 }
 
                 .step6-matrix-wrapper {
                     flex: 0 0 60% !important;
                     max-width: 60% !important;
-                    padding: 8px 5px !important;
+                    padding: 6px 4px !important;
                 }
 
                 .step6-matrix {
-                    gap: 4px !important;
+                    gap: 3px !important;
                 }
 
                 .step6-cell {
-                    font-size: 11px !important;
-                    border-radius: 6px !important;
+                    font-size: 9px !important;
+                    border-radius: 4px !important;
+                    height: 24px !important;
+                    /* Fixed height to ensure fit */
                 }
 
                 .step6-matrix-label {
