Final Step 7: apply 70% mobile scaling to all text and card elements

--- a/index.html
+++ b/index.html
@@ -9976,6 +9976,68 @@
                     text-align: center !important;
                     word-break: keep-all !important;
                 }
+
+                /* ===== Step 7 (Final): 70% text scale for mobile fit ===== */
+                #naviStep7 h2 {
+                    font-size: 17.29px !important;
+                    /* 70% of 24.7px */
+                    margin-top: 8px !important;
+                    margin-bottom: 4px !important;
+                }
+
+                #naviStep7>p {
+                    margin-bottom: 8px !important;
+                    font-size: 12px !important;
+                }
+
+                #finalNaviResult {
+                    border-radius: 16px !important;
+                    padding: 16px 14px !important;
+                }
+
+                #finalNaviResult h3 {
+                    font-size: 9.1px !important;
+                    /* 70% of 13px */
+                    letter-spacing: 2px !important;
+                    margin-bottom: 14px !important;
+                }
+
+                #finalNaviNumbers {
+                    gap: 5px !important;
+                    margin-bottom: 14px !important;
+                }
+
+                /* Lotto balls inside the final card */
+                #finalNaviNumbers .result-ball,
+                #finalNaviNumbers>div {
+                    width: 38px !important;
+                    height: 50px !important;
+                    font-size: 13px !important;
+                }
+
+                #finalNaviIndicators {
+                    font-size: 9.1px !important;
+                    /* 70% of 13px */
+                    padding: 8px !important;
+                    gap: 10px !important;
+                    margin-bottom: 14px !important;
+                    border-radius: 8px !important;
+                }
+
+                #downloadFateBtn {
+                    font-size: 10.5px !important;
+                    /* 70% of 15px */
+                    padding: 10px !important;
+                    margin-bottom: 8px !important;
+                    border-radius: 8px !important;
+                }
+
+                #naviStep7 .step7-share-row button,
+                #finalNaviResult>div:last-child button {
+                    font-size: 10.5px !important;
+                    padding: 9px !important;
+                    border-radius: 7px !important;
+                }
             }
 
             /* ============================================================ */
